[package]
name = "tweet-at-compile-time"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
egg-mode = "0.11"
tokio-core = "0.1"
proc-macro2 = { version = "0.1", features = ["unstable"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
